# tauri-opencv-webcam

./: README.md  package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Greet.vue
