[package]
name = "tauri_opencv_webcam"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opencv = "0.83.0"
anyhow = "1"
minifb = "0.24"
fast_image_resize = "2.7.3"
once_cell = "1.18.0"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation"
]

[dependencies.nokhwa]
version = "0.10.4"
features = ["input-native", "output-threaded"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
